# edonet

./: README.md  gradient_check.py  pyproject.toml  test_conv.py  test_dense.py
.github/workflows/: github-ci.yml
edonet/: __init__.py  layers.py  main.py  metrics.py  optimizers.py
edonet/functions/: __init__.py  activation.py  loss.py  optimizer.py
tests/: test_conv.py  test_dense.py  test_gradient.py
